--- a/backstage-templates/namespace/skeleton/${{values.cluster}}/${{values.application}}-${{values.environment}}-namespace.yaml
+++ b/backstage-templates/namespace/skeleton/${{values.cluster}}/${{values.application}}-${{values.environment}}-namespace.yaml
@@ -1,11 +1,35 @@
-apiVersion: v1
-kind: Namespace
-metadata:
-  annotations:
-    openshift.io/description: ${{values.description}}
-  labels:
-    application: ${{values.application}}
-    size: ${{values.size}}
-    team: ${{values.owner}}
-    environment: ${{values.environment}}
-  name: ${{values.application}}-${{values.purpose}}
+---
+namespaces:
+  - name: ${{values.applicationId}}-${{values.purpose}}
+    enabled: true
+    displayName: ${{values.applicationId}}-${{values.purpose}}
+    description: ${{values.descriptionId}}
+    labels:
+      appId: ${{values.applicationId}}
+      techArea: ${{values.environment}}
+      owner: ${{values.owner}}
+      slaTier: "1"
+      drRating: "3"
+    bindings:
+      - name: project1-admin
+        kind: Group
+        role: admin
+        roleType: ClusterRole
+      - name: project1-edit
+        kind: Group
+        role: edit
+        roleType: ClusterRole
+      - name: project1-view
+        kind: Group
+        role: view
+        roleType: ClusterRole
+    operatorgroup: false
+    resourceQuota:
+      hard:
+        limits.memory: "8Gi"
+        requests.cpu: "2"
+        requests.memory: "8Gi"
+        persistentvolumeclaims: "5"
+        requests.storage: "100Gi"
+    egressIps:
+      - 192.168.17.101
