--- a/backstage-templates/namespace/skeleton/${{values.cluster}}/${{values.application}}-${{values.environment}}-namespace.yaml
+++ b/backstage-templates/namespace/skeleton/${{values.cluster}}/${{values.application}}-${{values.environment}}-namespace.yaml
@@ -26,7 +26,7 @@ namespaces:
     operatorgroup: false
     resourceQuota:
       hard:
-        limits.memory: "8Gi"
+        limits.memory: ${{values.limits.memory}}
         requests.cpu: "2"
         requests.memory: "8Gi"
         persistentvolumeclaims: "5"
