--- a/backstage-templates/namespace/template.yaml
+++ b/backstage-templates/namespace/template.yaml
@@ -55,7 +55,7 @@ spec:
               - Group
 
       dependencies:
-        includeName:
+        size:
           allOf:
             - if:
                 properties:
