--- a/backstage-templates/namespace/template.yaml
+++ b/backstage-templates/namespace/template.yaml
@@ -60,7 +60,7 @@ spec:
             - if:
                 properties:
                   size:
-                    const: "small"
+                    enum: "small"
               then:
                 properties:
                   limitsMemory:
