--- a/backstage-templates/namespace/template.yaml
+++ b/backstage-templates/namespace/template.yaml
@@ -60,7 +60,8 @@ spec:
             - if:
                 properties:
                   size:
-                    enum: "small"
+                    enum:
+                      - "small"
               then:
                 properties:
                   limitsMemory:
