--- a/backstage-templates/namespace/template.yaml
+++ b/backstage-templates/namespace/template.yaml
@@ -56,7 +56,7 @@ spec:
 
       dependencies:
         size:
-          anyOf:
+          oneOf:
             - if:
                 properties:
                   size:
