--- a/backstage-templates/namespace/template.yaml
+++ b/backstage-templates/namespace/template.yaml
@@ -136,6 +136,10 @@ spec:
           applicationId: ${{ parameters.applicationId }}
           size: ${{parameters.size}}
           limitsMemory: ${{parameters.limitsMemory}}
+          requestsCpu: ${{values.requestsCPU}}
+          requestsMemory: ${{values.requestsMemory}}
+          persistentVolumeClaims: ${{values.persistentVolumeClaims}}
+          requestsStorage: ${{values.requestsStorage}}
     - id: pull-request
       name: make a pr with the new namespace
       action: publish:github:pull-request
