--- a/backstage-templates/namespace/template.yaml
+++ b/backstage-templates/namespace/template.yaml
@@ -54,7 +54,7 @@ spec:
           title: Size
           type: string
           description: Size of the namespace in terms of resources available
-          enum: ["small", "medium", "large", "custom"]
+          enum: ["small", "medium", "large"]
           ui:widget: radio
 
       dependencies:
@@ -135,31 +135,7 @@ spec:
                   type: string
                   default: "1000Gi"
                   ui:readonly: true
-            - properties:
-                size:
-                  enum:
-                    - custom
-                limitsMemory:
-                  title: Memory
-                  type: string
-                  default: "1Gi"
-                  ui:readonly: false
-                requestsCpu:
-                  type: string
-                  default: "2"
-                  ui:readonly: false
-                requestsMemory:
-                  type: string
-                  default: "4Gi"
-                  ui:readonly: false
-                persistentVolumeClaims:
-                  type: string
-                  default: "5"
-                  ui:readonly: false
-                requestsStorage:
-                  type: string
-                  default: "20Gi"
-                  ui:readonly: false
+
   steps:
     - id: template
       name: Code Fetch Skeleton + Template
