--- a/backstage-templates/namespace/template.yaml
+++ b/backstage-templates/namespace/template.yaml
@@ -151,7 +151,7 @@ spec:
           applicationId: ${{ parameters.applicationId }}
           size: ${{parameters.size}}
           limitsMemory: ${{parameters.limitsMemory}}
-          requestsCpu: ${{parameters.requestsCPU}}
+          requestsCpu: ${{parameters.requestsCpu}}
           requestsMemory: ${{parameters.requestsMemory}}
           persistentVolumeClaims: ${{parameters.persistentVolumeClaims}}
           requestsStorage: ${{parameters.requestsStorage}}
