--- a/backstage-templates/namespace/template.yaml
+++ b/backstage-templates/namespace/template.yaml
@@ -156,10 +156,10 @@ spec:
           persistentVolumeClaims: ${{parameters.persistentVolumeClaims}}
           requestsStorage: ${{parameters.requestsStorage}}
     - id: pull-request
-      name: make a pr with the new namespace
+      name: make a pr with the new project
       action: publish:github:pull-request
       input:
         repoUrl: github.com?repo=boot-project-values&owner=eformat
         branchName: ${{ parameters.applicationId }}-${{ parameters.environment }}-${{ parameters.cluster }}
-        title: clusters/${{ parameters.cluster }}/${{ parameters.applicationId }}-${{ parameters.environment }} namespace
-        description: This is a request for the creation of the ${{ parameters.applicationId }}-${{ parameters.environment }} namespace in the ${{ parameters.cluster }} from the ${{ parameters.owner }} team
+        title: clusters/${{ parameters.environment }}/${{ parameters.cluster }}/${{ parameters.applicationId }} Project
+        description: This is a request for the creation of the ${{ parameters.applicationId }}-${{ parameters.environment }} Project in the ${{ parameters.cluster }} from the ${{ parameters.owner }} team
