--- a/backstage-templates/namespace/template.yaml
+++ b/backstage-templates/namespace/template.yaml
@@ -36,12 +36,6 @@ spec:
           title: Description
           type: string
           description: Short description for this environment
-        cluster:
-          title: Cluster
-          type: string
-          description: Cluster in which the namespace for this environment will be created
-          enum: ["ocp-dev-1", "ocp-npr-1", "ocp-npr-2", "ocp-prod-1", "ocp-prod-2"]
-          ui:widget: radio
         owner:
           title: Owner
           type: string
@@ -58,6 +52,38 @@ spec:
           ui:widget: radio
 
       dependencies:
+        environment:
+          oneOf:
+            - properties:
+                size:
+                  enum:
+                    - dev
+                cluster:
+                  title: Cluster
+                  type: string
+                  description: Cluster in which the namespace for this environment will be created
+                  enum: ["ocp-dev-1", "ocp-dev-2", "ocp-dev-3"]
+                  ui:widget: radio
+            - properties:
+                size:
+                  enum:
+                    - test
+                cluster:
+                  title: Cluster
+                  type: string
+                  description: Cluster in which the namespace for this environment will be created
+                  enum: ["ocp-npr-1", "ocp-npr-2"]
+                  ui:widget: radio
+            - properties:
+                size:
+                  enum:
+                    - prod
+                cluster:
+                  title: Cluster
+                  type: string
+                  description: Cluster in which the namespace for this environment will be created
+                  enum: ["ocp-prod-1", "ocp-prod-2"]
+                  ui:widget: radio
         size:
           oneOf:
             - properties:
