--- a/backstage-templates/namespace/skeleton/clusters/${{values.environment}}/${{values.cluster}}/${{values.applicationId}}-${{values.environment}}-namespace.yaml
+++ b/backstage-templates/namespace/skeleton/clusters/${{values.environment}}/${{values.cluster}}/${{values.applicationId}}-${{values.environment}}-namespace.yaml
@@ -3,7 +3,7 @@ namespaces:
   - name: ${{values.applicationId}}-${{values.environment}}
     enabled: true
     displayName: "${{values.applicationId}}-${{values.environment}}"
-    description: "${{values.descriptionId}}"
+    description: "${{values.description}}"
     labels:
       appId: "${{values.applicationId}}"
       techArea: "${{values.environment}}"
